--- a/_outputTex/_t.lvcor.tex
+++ b/_outputTex/_t.lvcor.tex
@@ -1,8 +1,9 @@
-Evolution & $-0.397$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ \\ 
-Rejection of CAM & $-0.170$ & $0.163$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ \\ 
-Men/women evolved differently & $0.183$ & $0.334$ & $0.046ns$ & $$ & $$ & $$ & $$ & $$ & $$ \\ 
-Men/women naturally different & $0.420$ & $-0.284$ & $-0.013ns$ & $0.849$ & $$ & $$ & $$ & $$ & $$ \\ 
-Men/women are the same & $-0.276$ & $0.314$ & $-0.012ns$ & $-0.354$ & $-0.657$ & $$ & $$ & $$ & $$ \\ 
-Religiosity & $0.282$ & $-0.591$ & $-0.203$ & $-0.127$ & $0.231$ & $-0.232$ & $$ & $$ & $$ \\ 
-Vaccinations & $-0.239$ & $0.351$ & $0.396$ & $-0.051ns$ & $-0.158$ & $0.177$ & $-0.062ns$ & $$ & $$ \\ 
-Conservatism & $0.480$ & $-0.306$ & $-0.192$ & $0.067ns$ & $0.381$ & $-0.355$ & $0.560$ & $0.005ns$ & $$ \\ 
+Evolution & $-0.389$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ \\ 
+Rejection of CAM & $-0.182$ & $0.185$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ \\ 
+Men/women evolved differently & $0.179$ & $0.327$ & $0.048ns$ & $$ & $$ & $$ & $$ & $$ & $$ & $$ \\ 
+Men/women naturally different & $0.426$ & $-0.307$ & $-0.020ns$ & $0.822$ & $$ & $$ & $$ & $$ & $$ & $$ \\ 
+Men/women are the same & $-0.271$ & $0.331$ & $-0.009ns$ & $-0.350$ & $-0.669$ & $$ & $$ & $$ & $$ & $$ \\ 
+Religiosity & $0.288$ & $-0.598$ & $-0.199$ & $-0.110$ & $0.256$ & $-0.246$ & $$ & $$ & $$ & $$ \\ 
+Vaccinations & $-0.243$ & $0.352$ & $0.409$ & $-0.043ns$ & $-0.152$ & $0.192$ & $-0.062ns$ & $$ & $$ & $$ \\ 
+Conservatism & $0.484$ & $-0.315$ & $-0.199$ & $0.069ns$ & $0.400$ & $-0.351$ & $0.563$ & $-0.008ns$ & $$ & $$ \\ 
+CRT & $-0.206$ & $0.269$ & $0.183$ & $-0.010ns$ & $-0.035ns$ & $-0.130$ & $-0.201$ & $0.197$ & $-0.009ns$ & $$ \\ 
