Commit of version sent out for final comments by Jan and Klaus

--- a/_outputTex/_t.lvcor.tex
+++ b/_outputTex/_t.lvcor.tex
@@ -5,5 +5,5 @@ Men/women naturally different & $0.426$ & $-0.307$ & $-0.020ns$ & $0.822$ & $$ &
 Men/women are the same & $-0.271$ & $0.331$ & $-0.009ns$ & $-0.350$ & $-0.669$ & $$ & $$ & $$ & $$ & $$ \\ 
 Religiosity & $0.288$ & $-0.598$ & $-0.199$ & $-0.110$ & $0.256$ & $-0.246$ & $$ & $$ & $$ & $$ \\ 
 Vaccinations & $-0.243$ & $0.352$ & $0.409$ & $-0.043ns$ & $-0.152$ & $0.192$ & $-0.062ns$ & $$ & $$ & $$ \\ 
-Conservatism & $0.484$ & $-0.315$ & $-0.199$ & $0.069ns$ & $0.400$ & $-0.351$ & $0.563$ & $-0.008ns$ & $$ & $$ \\ 
+Socio-pol conservatism & $0.484$ & $-0.315$ & $-0.199$ & $0.069ns$ & $0.400$ & $-0.351$ & $0.563$ & $-0.008ns$ & $$ & $$ \\ 
 CRT & $-0.206$ & $0.269$ & $0.183$ & $-0.010ns$ & $-0.035ns$ & $-0.130$ & $-0.201$ & $0.197$ & $-0.009ns$ & $$ \\ 
